samples/_failures_safe/1761329344_f98668_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea21608e.c: In function ‘main’:
./samples/SAFE/__tmp_ea21608e.c:146:16: error: missing terminating " character
  146 |         printf("Failed to read
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ea21608e.c:146:9: error: expected expression at end of input
  146 |         printf("Failed to read
      |         ^~~~~~
./samples/SAFE/__tmp_ea21608e.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea21608e.c:146:9: error: expected declaration or statement at end of input
